Fixed some errors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>Discover artisan beverages and gourmet snacks — delivered to your door.</p>
                     <a href="products.html" class="btn">Shop Now</a>
                 </div>
-                <img src="/assets/images/hero-coffee.jpg" alt="Fresh coffee and pastry" class="hero-img">
+                <img src="assets/images/hero-coffee.jpg" alt="Fresh coffee and pastry" class="hero-img">
             </div>
         </section>
 
@@ -40,19 +40,19 @@
             <div class="product-grid">
                 <!-- Product card example -->
                 <article class="product-card">
-                    <img src="/assets/images/latte.jpg" alt="Caffe Latte">
+                    <img src="assets/images/latte.jpg" alt="Caffe Latte">
                     <h3>Caffe Latte</h3>
                     <p class="price">$3.50</p>
                     <button class="btn small">Add to Cart</button>
                 </article>
                 <article class="product-card">
-                    <img src="/assets/images/green-tea.jpg" alt="Green Tea">
+                    <img src="assets/images/green-tea.jpg" alt="Green Tea">
                     <h3>Organic Green Tea</h3>
                     <p class="price">$2.50</p>
                     <button class="btn small">Add to Cart</button>
                 </article>
                 <article class="product-card">
-                    <img src="/assets/images/sandwich.jpg" alt="Club Sandwich">
+                    <img src="assets/images/sandwich.jpg" alt="Club Sandwich">
                     <h3>Club Sandwich</h3>
                     <p class="price">$6.00</p>
                     <button class="btn small">Add to Cart</button>
