--- a/products.html
+++ b/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
 </head>
 
@@ -27,7 +27,7 @@
             <div class="product-grid">
                 <!-- Repeat product cards; in a real site you'd generate these dynamically -->
                 <article class="product-card">
-                    <img src="/assets/images/latte.jpg" alt="Caffe Latte">
+                    <img src="assets/images/latte.jpg" alt="Caffe Latte">
                     <h3>Caffe Latte</h3>
                     <p class="price">$3.50</p>
                     <button class="btn small">Add to Cart</button>
@@ -35,7 +35,7 @@
 
 
                 <article class="product-card">
-                    <img src="/assets/images/espresso.jpg" alt="Espresso">
+                    <img src="assets/images/espresso.jpg" alt="Espresso">
                     <h3>Espresso</h3>
                     <p class="price">$2.00</p>
                     <button class="btn small">Add to Cart</button>
@@ -43,7 +43,7 @@
 
 
                 <article class="product-card">
-                    <img src="/assets/images/green-tea.jpg" alt="Green Tea">
+                    <img src="assets/images/green-tea.jpg" alt="Green Tea">
                     <h3>Organic Green Tea</h3>
                     <p class="price">$2.50</p>
                     <button class="btn small">Add to Cart</button>
@@ -51,7 +51,7 @@
 
 
                 <article class="product-card">
-                    <img src="/assets/images/sandwich.jpg" alt="Club Sandwich">
+                    <img src="assets/images/sandwich.jpg" alt="Club Sandwich">
                     <h3>Club Sandwich</h3>
                     <p class="price">$6.00</p>
                     <button class="btn small">Add to Cart</button>
