--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- <link rel="stylesheet" href="css/style.css"> -->
 <html lang="en">
 
 <head>
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FreshSip — About Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
 </head>
 
