--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FreshSip — Contact</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FreshSip — Contact</title>
+  
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+
+  <!-- ✅ Correct CSS link -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="s
+  <header class="site-header">
+    <!-- your nav content here -->
+  </header>
+</body>
+</html>
