Correct the css file linking

--- a/about.html
+++ b/about.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<!-- <link rel="stylesheet" href="css/style.css"> -->
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FreshSip — About Us</title>
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+
+    <!-- ✅ Correct CSS link -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -27,16 +32,15 @@
         </div>
     </header>
 
-
     <main class="container about-page">
         <section>
             <h1>About FreshSip</h1>
-            <p>FreshSip is a locally owned food & beverage shop focused on bringing fresh, high-quality drinks and
-                snacks to our community.
-                Our mission is to use responsibly sourced ingredients and provide a friendly, sustainable experience.
+            <p>
+                FreshSip is a locally owned food & beverage shop focused on bringing fresh, high-quality drinks and
+                snacks to our community. Our mission is to use responsibly sourced ingredients and provide a friendly,
+                sustainable experience.
             </p>
         </section>
-
 
         <section class="values">
             <div>
@@ -45,7 +49,7 @@
             </div>
             <div>
                 <h3>Sustainability</h3>
-                <p>Eco‑friendly packaging and local sourcing.</p>
+                <p>Eco-friendly packaging and local sourcing.</p>
             </div>
             <div>
                 <h3>Community</h3>
@@ -53,7 +57,6 @@
             </div>
         </section>
     </main>
-
 
     <footer class="site-footer">
         <div class="container footer-inner">
@@ -75,9 +78,11 @@
         </div>
     </footer>
 
-
-    <script>document.getElementById('year').textContent = new Date().getFullYear();
-        document.querySelector('.nav-toggle').addEventListener('click', () => { document.querySelector('.main-nav').classList.toggle('open'); });
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+        document.querySelector('.nav-toggle').addEventListener('click', () => {
+            document.querySelector('.main-nav').classList.toggle('open');
+        });
     </script>
 </body>
 
