--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/style.css">
-<script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>FreshSip — Home</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+
+    <!-- ✅ Correct CSS link -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -21,7 +34,6 @@
         </div>
     </header>
 
-
     <main>
         <section class="hero">
             <div class="container hero-inner">
@@ -33,7 +45,6 @@
                 <img src="assets/images/hero-coffee.jpg" alt="Fresh coffee and pastry" class="hero-img">
             </div>
         </section>
-
 
         <section class="featured container">
             <h2>Featured products</h2>
@@ -61,7 +72,6 @@
         </section>
     </main>
 
-
     <footer class="site-footer">
         <div class="container footer-inner">
             <div class="footer-col">
@@ -81,7 +91,6 @@
             </div>
         </div>
     </footer>
-
 
     <script>
         // small script to keep header simple & set year
