--- a/products.html
+++ b/products.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/style.css">
-<script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>FreshSip — Products</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a2e6b5f6c8.js" crossorigin="anonymous"></script>
+
+    <!-- ✅ Correct CSS link -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <!-- header same as index (kept for static demo) -->
     <header class="site-header">
         <div class="container header-inner">
             <a href="index.html" class="brand">Fresh<span>Sip</span></a>
@@ -14,25 +26,24 @@
                 <a href="about.html" class="nav-link">About</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </nav>
-            <button class="cart-btn" aria-label="Open cart"><i class="fas fa-shopping-cart"></i><span
-                    class="cart-count">0</span></button>
+            <button class="cart-btn" aria-label="Open cart">
+                <i class="fas fa-shopping-cart"></i><span class="cart-count">0</span>
+            </button>
             <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
         </div>
     </header>
-
 
     <main class="container">
         <section class="products-list">
             <h1>All Products</h1>
             <div class="product-grid">
-                <!-- Repeat product cards; in a real site you'd generate these dynamically -->
+                <!-- Product cards -->
                 <article class="product-card">
                     <img src="assets/images/latte.jpg" alt="Caffe Latte">
                     <h3>Caffe Latte</h3>
                     <p class="price">$3.50</p>
                     <button class="btn small">Add to Cart</button>
                 </article>
-
 
                 <article class="product-card">
                     <img src="assets/images/espresso.jpg" alt="Espresso">
@@ -41,14 +52,12 @@
                     <button class="btn small">Add to Cart</button>
                 </article>
 
-
                 <article class="product-card">
                     <img src="assets/images/green-tea.jpg" alt="Green Tea">
                     <h3>Organic Green Tea</h3>
                     <p class="price">$2.50</p>
                     <button class="btn small">Add to Cart</button>
                 </article>
-
 
                 <article class="product-card">
                     <img src="assets/images/sandwich.jpg" alt="Club Sandwich">
@@ -57,12 +66,10 @@
                     <button class="btn small">Add to Cart</button>
                 </article>
 
-
                 <!-- add more as needed -->
             </div>
         </section>
     </main>
-
 
     <footer class="site-footer">
         <div class="container footer-inner">
@@ -84,9 +91,11 @@
         </div>
     </footer>
 
-
-    <script>document.getElementById('year').textContent = new Date().getFullYear();
-        document.querySelector('.nav-toggle').addEventListener('click', () => { document.querySelector('.main-nav').classList.toggle('open'); });
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+        document.querySelector('.nav-toggle').addEventListener('click', () => {
+            document.querySelector('.main-nav').classList.toggle('open');
+        });
     </script>
 </body>
 
